<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.mosip.commons</groupId>
    <artifactId>commons-packet-manager</artifactId>
    <name>commons-packet-manager</name>
    <description>Mosip commons project </description>
    <url>https://github.com/mosip/commons</url>
    <version>1.3.0-SNAPSHOT</version>
 <properties>
        <!-- maven -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.version>3.8.0</maven.compiler.version>
        <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
        <maven.war.plugin.version>3.1.0</maven.war.plugin.version>
        <maven.javadoc.version>3.2.0</maven.javadoc.version>
        <maven-shade-plugin.version>2.3</maven-shade-plugin.version>
        <maven.deploy.plugin.version>2.8.1</maven.deploy.plugin.version>
		<maven.source.plugin.version>2.2.1</maven.source.plugin.version>
		<maven.gpg.plugin.version>1.5</maven.gpg.plugin.version>
		<nexus.staging.plugin.version>1.6.14</nexus.staging.plugin.version>
		<git.commit.plugin.version>3.0.1</git.commit.plugin.version>
        <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
        <hazelcast.kubernetes.version>1.3.1</hazelcast.kubernetes.version>

        <kernel-keymanager-service.version>1.3.0-SNAPSHOT</kernel-keymanager-service.version>
        <kernel-idobjectvalidator.version>1.3.0-SNAPSHOT</kernel-idobjectvalidator.version>
        <kernel.core.version>1.3.0-SNAPSHOT</kernel.core.version>
        <kernel.biometrics.api.version>1.3.0-SNAPSHOT</kernel.biometrics.api.version>
        <kernel.cbeffutil.api.version>1.3.0-SNAPSHOT</kernel.cbeffutil.api.version>
        <kernel.auth.adaptor.version>1.3.0-SNAPSHOT</kernel.auth.adaptor.version>
        <kernel-dataaccess-hibernate.version>1.3.0-SNAPSHOT</kernel-dataaccess-hibernate.version>
        <kernel.logger.logback.version>1.3.0-SNAPSHOT</kernel.logger.logback.version>
        <khazana.version>1.3.0-SNAPSHOT</khazana.version>
         <kernel.bom.version>1.3.0-SNAPSHOT</kernel.bom.version>
         <mockito.core.version>3.11.2</mockito.core.version>
        <sonar.coverage.exclusions>**/constants/**,**/config/**,**/audit/**,**/util/**,**/dto/**,**/entity/**,**/model/**,**/exception/**,**/repository/**,**/security/**,**/*Config.java,**/*BootApplication.java,**/*VertxApplication.java,**/cbeffutil/**,**/*Utils.java,**/*Validator.java,**/*Helper.java,**/verticle/**,**/VidWriter.java/**,**/masterdata/utils/**,**/spi/**,**/core/http/**,"**/LocationServiceImpl.java","**/RegistrationCenterMachineServiceImpl.java","**/RegistrationCenterServiceImpl.java","**/pridgenerator/**","**/idgenerator/prid","**/proxy/**","**/cryptosignature/**"</sonar.coverage.exclusions>
        <sonar.cpd.exclusions>**/dto/**,**/entity/**,**/config/**</sonar.cpd.exclusions>
        <jacoco.maven.plugin.version>0.8.11</jacoco.maven.plugin.version>

 </properties>
    <dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.mosip.kernel</groupId>
				<artifactId>kernel-bom</artifactId>
				<version>${kernel.bom.version}</version>
				<type>pom</type>
			    <scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>io.mosip.kernel</groupId>
            <artifactId>kernel-idobjectvalidator</artifactId>
            <version>${kernel-idobjectvalidator.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>io.mosip.kernel</groupId>
            <artifactId>kernel-core</artifactId>
            <version>${kernel.core.version}</version>
        </dependency>
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast-kubernetes</artifactId>
            <version>${hazelcast.kubernetes.version}</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
        </dependency>
        <dependency>
            <groupId>io.mosip.kernel</groupId>
            <artifactId>kernel-logger-logback</artifactId>
            <version>${kernel.logger.logback.version}</version>
        </dependency>
        <dependency>
            <groupId>io.mosip.kernel</groupId>
            <artifactId>kernel-cbeffutil-api</artifactId>
            <version>${kernel.cbeffutil.api.version}</version>
        </dependency>
        <dependency>
            <groupId>io.mosip.kernel</groupId>
            <artifactId>kernel-biometrics-api</artifactId>
            <version>${kernel.biometrics.api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>io.mosip.commons</groupId>
            <artifactId>khazana</artifactId>
            <version>${khazana.version}</version>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
        </dependency>
        <dependency>
            <groupId>io.mosip.kernel</groupId>
            <artifactId>kernel-keymanager-service</artifactId>
            <version>${kernel-keymanager-service.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.security</groupId>
                    <artifactId>spring-security-config</artifactId>
                </exclusion>
            </exclusions>
            <classifier>lib</classifier>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
        </dependency>
			 <dependency>
         <groupId>org.junit.vintage</groupId>
          <artifactId>junit-vintage-engine</artifactId> 
        </dependency>
         <dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				 <version>${mockito.core.version}</version>
			</dependency>
    </dependencies>


<distributionManagement>
		<snapshotRepository>
                        <id>ossrh</id>
                        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository> 
                 <repository>
                        <id>ossrh</id>
                        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository> 
        </distributionManagement> 
        <build>
         <plugins>
			  <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <skipTests>false</skipTests>
                        <skip>false</skip>
                        <argLine>
                             --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --enable-preview
                        </argLine>
                    </configuration>
                </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
           
            <plugin>
              <artifactId>maven-deploy-plugin</artifactId>
              <version>${maven.deploy.plugin.version}</version>
              <executions>
                 <execution>
                    <id>default-deploy</id>
                    <phase>deploy</phase>
                    <goals>
                       <goal>deploy</goal>
                    </goals>
                 </execution>
              </executions>
           </plugin>
               <plugin>
                  <groupId>org.sonatype.plugins</groupId>
                  <artifactId>nexus-staging-maven-plugin</artifactId>
                  <version>${nexus.staging.plugin.version}</version>
                  <extensions>true</extensions>
                  <executions>
                    <execution>
                      <id>default-deploy</id>
                      <phase>deploy</phase>
                      <goals>
                        <goal>deploy</goal>
                      </goals>
                    </execution>
                  </executions>
                  <configuration>
                        <serverId>ossrh</serverId>
                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                        <autoReleaseAfterClose>false</autoReleaseAfterClose>
                  </configuration>
                </plugin> 

               <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-source-plugin</artifactId>
                  <inherited>true</inherited>
                  <version>${maven.source.plugin.version}</version>
                  <executions>
                        <execution>
                          <id>attach-sources</id>
                          <goals>
                                <goal>jar-no-fork</goal>
                          </goals>
                        </execution>
                  </executions>
                </plugin>

              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-javadoc-plugin</artifactId>
                  <version>${maven.javadoc.version}</version>
                  <executions>
                        <execution>
                          <id>attach-javadocs</id>
                          <goals>
                                <goal>jar</goal>
                          </goals>
                        </execution>
                  </executions>
                  <configuration>
                          <doclint>none</doclint>
                  </configuration>
                </plugin>
                <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-gpg-plugin</artifactId>
                  <version>${maven.gpg.plugin.version}</version>
                  <executions>
                        <execution>
                          <id>sign-artifacts</id>
                          <phase>verify</phase>
                          <goals>
                                <goal>sign</goal>
                          </goals>
		          <configuration>
                		<gpgArguments>
                    			<arg>--pinentry-mode</arg>
                    			<arg>loopback</arg>
                		</gpgArguments>
            		 </configuration>
                        </execution>
                  </executions>
                </plugin>

             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco.maven.plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
                         <id>report</id>
                         <phase>prepare-package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
		<plugin>
    			<groupId>pl.project13.maven</groupId>
			<artifactId>git-commit-id-plugin</artifactId>
			<version>${git.commit.plugin.version}</version>
			<executions>
        			<execution>
			        	<id>get-the-git-infos</id>
					<goals>
						<goal>revision</goal>
            				</goals>
            				<phase>validate</phase>
 				</execution>
 			</executions>
 			<configuration>
				<generateGitPropertiesFile>true</generateGitPropertiesFile>
				<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
                    		<includeOnlyProperties>
                        		<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
                        		<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
                    		</includeOnlyProperties>
                    		<commitIdGenerationMode>full</commitIdGenerationMode>
 				<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
				<!-- <format>json</format> -->
			</configuration>
		</plugin>
          </plugins>
        </build>
		<scm>
                <connection>scm:git:git://github.com/mosip/packet-manager.git</connection>
                <developerConnection>scm:git:ssh://github.com:mosip/packet-manager.git</developerConnection>
                <url>https://github.com/mosip/commons</url>
                <tag>HEAD</tag>
        </scm>
		<licenses>
          <license>
                <name>MPL 2.0</name>
                <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
          </license>
        </licenses>
		<developers>
                <developer>
                  <name>Mosip</name>
                  <email>mosip.emailnotifier@gmail.com</email>
                  <organization>io.mosip</organization>
                  <organizationUrl>https://github.com/mosip/commons</organizationUrl>
                </developer>
        </developers>
	</project>
